# append_to_namelist

./: setup.cfg
append_to_namelist/: __init__.py  append_to_namelist.py
