[metadata]
name = append_to_namelist 
description = Preprocessing for OIFS
description-file = README.rst
author = Sebastian Wahl 
author-email = swahl@geomar.de
license = GPLv3

[entry_points]
esm_tools.plugins = 
        append_to_namelist = append_to_namelist.append_to_namelist:append_to_namelist 
